--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+testcases/
+
 # Created by https://www.toptal.com/developers/gitignore/api/macos,go
 # Edit at https://www.toptal.com/developers/gitignore?templates=macos,go
 
